--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 		<meta name="theme-color" content="#16A386" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="Discover Stroud's premier web development and design company, crafting stunning online experiences tailored to your brand. From sleek designs to seamless functionality, we specialize in creating websites that captivate and convert. Elevate your online presence with our expert team of designers and developers. Contact us today for a consultation!"
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<!--
